добавил счетчик пройденного растояния

--- a/source/index.html
+++ b/source/index.html
@@ -8,13 +8,13 @@
   </head>
   
   <body>
-    <h1 class="title">Dino</h1>
+    <h1 class="title">dino</h1>
     
     <div class="game">
       <div class="score game__score">
         HI
-        <span class="score__now">00474</span>
         <span class="score__best">00474</span>
+        <span class="score__now">00000</span>
       </div>
       
       <div class="cloud-container">
