--- a/source/index.html
+++ b/source/index.html
@@ -27,6 +27,16 @@
         <div class="ground__cactus cactus cactus--1"></div>
         <div class="ground__cactus cactus cactus--2"></div>
         <div class="ground__cactus cactus cactus--3"></div>
+        
+        <div class="ground__soil soil"></div>
+        <div class="ground__soil soil"></div>
+        <div class="ground__soil soil"></div>
+        <div class="ground__soil soil"></div>
+        <div class="ground__soil soil"></div>
+        <div class="ground__soil soil"></div>
+        <div class="ground__soil soil"></div>
+        <div class="ground__soil soil"></div>
+        <div class="ground__soil soil"></div>
       </div>
       
       <div class="dino game__dino dino--step1">
